# munihac.github.io

./: .gitignore  .travis.yml  2016.html  2018.html  2019.html  2020.html  2022.html  2023.html  2024.html  README.md  booking-16164-44769.html  default.nix  deploy.sh  impressum.html  index.html  munihac.cabal  nixpkgs.nix  site.hs  site.nix  stack.yaml
.github/workflows/: main.yml
2022/: schedule.html
assets/: README.md  custom.css  package-lock.json  package.json  styles.scss
assets/scss/: styles.scss
content/: contact.html  contactButtons.html  footer.html  menu-archive.html
content/2016/: keynotes.html  logo.html  menu.html
content/2018/: keynotes.html  menu.html
content/2019/: introduction.html  keynotes.html  logo.html  menu.html  registration.html  schedule.html  techday.html
content/2020/: logo.html  menu.html  participant-info.html  programme.html  registration.html  (+1 more)
css/: .stylelintrc.json  custom.css  package.json  styles.css  styles.css.map
hotels/: 01-best-western-the-k.markdown  02-comfort-hotel.markdown  03-hotel-ibis.markdown  04-b-and-b.markdown
js/: load-iframe.js
logo/: font_raleway.tar.bz2  logo_complete.xcf  logo_complete2.xcf
nix/: sources.json
pages/: 2016.html  2018.html  2019.html  2020.html  2022.html  2023.html  2024.html  2025.html  archive.html  booking-16164-44769.html  contact.html  impressum.html
templates/: 2016.html  default.html  directions.html  footer.html  group_picture.html  hotels.html  introduction.html  keynotes.html  logo.html  pictures.html  projects.html  registration.html  schedule.html
(+76 files in other folders)
