name:               munihac
version:            0.1.1.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base
                  , hakyll
                  , unordered-containers
                  , aeson
                  , text
                  , scientific
  ghc-options:      -threaded
  default-language: Haskell2010
